[package]
name = "ego"
version = "1.1.6"
edition = "2021"
rust-version = "1.64.0"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Alter Ego: run Linux desktop applications under a different local user"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/intgr/ego"
repository = "https://github.com/intgr/ego"
keywords = ["sudo", "security", "wayland", "pulseaudio"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.3.0"
posix-acl = "1.1.0"
clap = { version = "~4.3.8", features = ["cargo"] }
log = { version = "0.4.19", features = ["std"] }
shell-words = "1.1.0"
nix = { version = "0.26.2", default-features = false, features = ["user"] }
anstyle = "1.0.1"

[features]
default = []

[dev-dependencies]
clap_complete = "~4.3.1"
snapbox = "0.4.11"
testing_logger = "0.1.1"
