[package]
name = "ego"
version = "1.2.0"
edition = "2024"
rust-version = "1.85.0"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Alter Ego: run Linux desktop applications under a different local user"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/intgr/ego"
repository = "https://github.com/intgr/ego"
keywords = ["sudo", "security", "wayland", "pulseaudio"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.3.1"
posix-acl = "1.2.0"
clap = { version = "~4.5.40", features = ["cargo"] }
log = { version = "0.4.27", features = ["std"] }
shell-words = "1.1.0"
nix = { version = "0.30.1", default-features = false, features = ["user"] }
anstyle = "1.0.11"
xcb = { version = "1.7.0", default-features = false, features = ["dl"] }

[features]
default = []

[dev-dependencies]
clap_complete = "~4.5.54"
env-lock = "1.0.1"
snapbox = "0.6.21"
testing_logger = "0.1.1"
